// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`golden menus (PBUI-ACTIONS-2 P0) > <datum> keep/exclude family over categorical columns 1`] = `
[
  {
    "id": "datum.addFilter.id.eq",
    "label": "Keep only id = evt-00001  (chart α)",
    "verb": {
      "docId": "d1",
      "field": "id",
      "kind": "addFilter",
      "op": "=",
      "value": "evt-00001",
    },
  },
  {
    "id": "datum.addFilter.id.ne",
    "label": "Exclude id = evt-00001",
    "verb": {
      "docId": "d1",
      "field": "id",
      "kind": "addFilter",
      "op": "!=",
      "value": "evt-00001",
    },
  },
  {
    "id": "datum.addFilter.drop.eq",
    "label": "Keep only drop = lab  (chart α)",
    "verb": {
      "docId": "d1",
      "field": "drop",
      "kind": "addFilter",
      "op": "=",
      "value": "lab",
    },
  },
  {
    "id": "datum.addFilter.drop.ne",
    "label": "Exclude drop = lab",
    "verb": {
      "docId": "d1",
      "field": "drop",
      "kind": "addFilter",
      "op": "!=",
      "value": "lab",
    },
  },
  {
    "id": "datum.addFilter.stream.eq",
    "label": "Keep only stream = temps  (chart α)",
    "verb": {
      "docId": "d1",
      "field": "stream",
      "kind": "addFilter",
      "op": "=",
      "value": "temps",
    },
  },
  {
    "id": "datum.addFilter.stream.ne",
    "label": "Exclude stream = temps",
    "verb": {
      "docId": "d1",
      "field": "stream",
      "kind": "addFilter",
      "op": "!=",
      "value": "temps",
    },
  },
  {
    "id": "datum.addFilter.time.eq",
    "label": "Keep only time = 2026-07-24T09:00:00.000Z  (chart α)",
    "verb": {
      "docId": "d1",
      "field": "time",
      "kind": "addFilter",
      "op": "=",
      "value": "2026-07-24T09:00:00.000Z",
    },
  },
  {
    "id": "datum.addFilter.time.ne",
    "label": "Exclude time = 2026-07-24T09:00:00.000Z",
    "verb": {
      "docId": "d1",
      "field": "time",
      "kind": "addFilter",
      "op": "!=",
      "value": "2026-07-24T09:00:00.000Z",
    },
  },
  {
    "id": "datum.inspect",
    "label": "Inspect",
    "verb": {
      "kind": "inspect",
      "ptype": "datum",
      "value": {
        "docId": "d1",
        "row": {
          "data.humidity": 54,
          "data.ok": true,
          "data.station": "north",
          "data.temp_c": 19.2,
          "drop": "lab",
          "id": "evt-00001",
          "received_at": "2026-07-24T09:00:00.000Z",
          "seq": 1,
          "source": "sensor-gateway",
          "stream": "temps",
          "subject": "north",
          "time": "2026-07-24T09:00:00.000Z",
          "type": "reading",
        },
      },
    },
  },
  {
    "id": "datum.watch",
    "label": "Add to watchlist",
    "verb": {
      "kind": "watch",
      "ptype": "datum",
      "value": {
        "docId": "d1",
        "row": {
          "data.humidity": 54,
          "data.ok": true,
          "data.station": "north",
          "data.temp_c": 19.2,
          "drop": "lab",
          "id": "evt-00001",
          "received_at": "2026-07-24T09:00:00.000Z",
          "seq": 1,
          "source": "sensor-gateway",
          "stream": "temps",
          "subject": "north",
          "time": "2026-07-24T09:00:00.000Z",
          "type": "reading",
        },
      },
    },
  },
]
`;

exports[`golden menus (PBUI-ACTIONS-2 P0) > <doc> active and inactive 1`] = `
[
  {
    "id": "doc.snapshot",
    "label": "⚑ Snapshot it",
    "verb": {
      "docId": "d1",
      "kind": "snapshot",
    },
  },
  {
    "id": "doc.duplicateDoc",
    "label": "Duplicate document",
    "verb": {
      "docId": "d1",
      "kind": "duplicateDoc",
    },
  },
  {
    "id": "doc.deleteDoc",
    "label": "Delete document",
    "verb": {
      "docId": "d1",
      "kind": "deleteDoc",
    },
  },
  {
    "id": "doc.inspect",
    "label": "Inspect",
    "verb": {
      "kind": "inspect",
      "ptype": "doc",
      "value": "d1",
    },
  },
  {
    "id": "doc.watch",
    "label": "Add to watchlist",
    "verb": {
      "kind": "watch",
      "ptype": "doc",
      "value": "d1",
    },
  },
]
`;

exports[`golden menus (PBUI-ACTIONS-2 P0) > <doc> active and inactive 2`] = `
[
  {
    "id": "doc.setActiveDoc",
    "label": "Make the ACTIVE chart",
    "verb": {
      "docId": "d2",
      "kind": "setActiveDoc",
    },
  },
  {
    "id": "doc.snapshot",
    "label": "⚑ Snapshot it",
    "verb": {
      "docId": "d2",
      "kind": "snapshot",
    },
  },
  {
    "id": "doc.duplicateDoc",
    "label": "Duplicate document",
    "verb": {
      "docId": "d2",
      "kind": "duplicateDoc",
    },
  },
  {
    "id": "doc.deleteDoc",
    "label": "Delete document",
    "verb": {
      "docId": "d2",
      "kind": "deleteDoc",
    },
  },
  {
    "id": "doc.inspect",
    "label": "Inspect",
    "verb": {
      "kind": "inspect",
      "ptype": "doc",
      "value": "d2",
    },
  },
  {
    "id": "doc.watch",
    "label": "Add to watchlist",
    "verb": {
      "kind": "watch",
      "ptype": "doc",
      "value": "d2",
    },
  },
]
`;

exports[`golden menus (PBUI-ACTIONS-2 P0) > <field> nominal column, impossible mappings disabled with reasons 1`] = `
[
  {
    "id": "field.setMapping.x",
    "label": "Map to x  (chart α)",
    "verb": {
      "channel": "x",
      "docId": "d1",
      "field": "data.station",
      "kind": "setMapping",
    },
  },
  {
    "disabledBecause": "y accepts quantitative",
    "id": "field.setMapping.y",
    "label": "Map to y  (chart α)",
    "verb": {
      "channel": "y",
      "docId": "d1",
      "field": "data.station",
      "kind": "setMapping",
    },
  },
  {
    "id": "field.setMapping.color",
    "label": "Map to color  (chart α)",
    "verb": {
      "channel": "color",
      "docId": "d1",
      "field": "data.station",
      "kind": "setMapping",
    },
  },
  {
    "disabledBecause": "size accepts quantitative",
    "id": "field.setMapping.size",
    "label": "Map to size  (chart α)",
    "verb": {
      "channel": "size",
      "docId": "d1",
      "field": "data.station",
      "kind": "setMapping",
    },
  },
  {
    "id": "field.setMapping.facet",
    "label": "Map to facet  (chart α)",
    "verb": {
      "channel": "facet",
      "docId": "d1",
      "field": "data.station",
      "kind": "setMapping",
    },
  },
  {
    "id": "field.addFilter.data.station.eq",
    "label": "Filter on this field",
    "verb": {
      "docId": "d1",
      "field": "data.station",
      "kind": "addFilter",
      "op": "=",
      "value": "",
    },
  },
  {
    "id": "field.addSummarize",
    "label": "Group by + count",
    "verb": {
      "by": "data.station",
      "docId": "d1",
      "field": "data.station",
      "fn": "count",
      "kind": "addSummarize",
    },
  },
  {
    "id": "field.addSort.desc",
    "label": "Sort output by (descending)",
    "verb": {
      "dir": "desc",
      "docId": "d1",
      "field": "data.station",
      "kind": "addSort",
    },
  },
  {
    "id": "field.inspect",
    "label": "Inspect",
    "verb": {
      "kind": "inspect",
      "ptype": "field",
      "value": {
        "docId": null,
        "name": "data.station",
      },
    },
  },
  {
    "id": "field.watch",
    "label": "Add to watchlist",
    "verb": {
      "kind": "watch",
      "ptype": "field",
      "value": {
        "docId": null,
        "name": "data.station",
      },
    },
  },
]
`;

exports[`golden menus (PBUI-ACTIONS-2 P0) > <field> owned by another document 1`] = `
[
  {
    "id": "field.setMapping.x",
    "label": "Map to x  (chart β)",
    "verb": {
      "channel": "x",
      "docId": "d2",
      "field": "population",
      "kind": "setMapping",
    },
  },
  {
    "id": "field.setMapping.y",
    "label": "Map to y  (chart β)",
    "verb": {
      "channel": "y",
      "docId": "d2",
      "field": "population",
      "kind": "setMapping",
    },
  },
  {
    "id": "field.setMapping.color",
    "label": "Map to color  (chart β)",
    "verb": {
      "channel": "color",
      "docId": "d2",
      "field": "population",
      "kind": "setMapping",
    },
  },
  {
    "id": "field.setMapping.size",
    "label": "Map to size  (chart β)",
    "verb": {
      "channel": "size",
      "docId": "d2",
      "field": "population",
      "kind": "setMapping",
    },
  },
  {
    "disabledBecause": "facet accepts nominal, temporal",
    "id": "field.setMapping.facet",
    "label": "Map to facet  (chart β)",
    "verb": {
      "channel": "facet",
      "docId": "d2",
      "field": "population",
      "kind": "setMapping",
    },
  },
  {
    "id": "field.addFilter.population.gt",
    "label": "Filter on this field",
    "verb": {
      "docId": "d2",
      "field": "population",
      "kind": "addFilter",
      "op": ">",
      "value": "",
    },
  },
  {
    "id": "field.addSort.desc",
    "label": "Sort output by (descending)",
    "verb": {
      "dir": "desc",
      "docId": "d2",
      "field": "population",
      "kind": "addSort",
    },
  },
  {
    "id": "field.inspect",
    "label": "Inspect",
    "verb": {
      "kind": "inspect",
      "ptype": "field",
      "value": {
        "docId": "d2",
        "name": "population",
      },
    },
  },
  {
    "id": "field.watch",
    "label": "Add to watchlist",
    "verb": {
      "kind": "watch",
      "ptype": "field",
      "value": {
        "docId": "d2",
        "name": "population",
      },
    },
  },
]
`;

exports[`golden menus (PBUI-ACTIONS-2 P0) > <source> 1`] = `
[
  {
    "id": "source.setSource",
    "label": "Load into chart α",
    "verb": {
      "docId": "d1",
      "kind": "setSource",
      "source": {
        "dataset": "census",
        "drop": "lab",
        "kind": "dataset",
        "path": "rows.csv",
        "version": 2,
      },
    },
  },
  {
    "id": "source.newDoc",
    "label": "New chart document from it",
    "verb": {
      "kind": "newDoc",
      "source": {
        "dataset": "census",
        "drop": "lab",
        "kind": "dataset",
        "path": "rows.csv",
        "version": 2,
      },
    },
  },
  {
    "id": "source.inspect",
    "label": "Inspect",
    "verb": {
      "kind": "inspect",
      "ptype": "source",
      "value": {
        "dataset": "census",
        "drop": "lab",
        "kind": "dataset",
        "path": "rows.csv",
        "version": 2,
      },
    },
  },
  {
    "id": "source.watch",
    "label": "Add to watchlist",
    "verb": {
      "kind": "watch",
      "ptype": "source",
      "value": {
        "dataset": "census",
        "drop": "lab",
        "kind": "dataset",
        "path": "rows.csv",
        "version": 2,
      },
    },
  },
]
`;

exports[`golden menus (PBUI-ACTIONS-2 P0) > <stage> not current 1`] = `
[
  {
    "id": "stage.switchStage",
    "label": "Switch to it",
    "verb": {
      "kind": "switchStage",
      "stageId": "s1",
    },
  },
  {
    "id": "stage.exportStage",
    "label": "Copy this stage to the clipboard",
    "verb": {
      "kind": "exportStage",
      "stageId": "s1",
    },
  },
  {
    "id": "stage.importStage",
    "label": "Add a stage from the clipboard …",
    "verb": {
      "kind": "importStage",
    },
  },
  {
    "id": "stage.importWorkspace",
    "label": "Add a workspace from the clipboard …",
    "verb": {
      "kind": "importWorkspace",
      "stageId": "s1",
    },
  },
  {
    "id": "stage.storeTemplate",
    "label": "Save as a template …",
    "verb": {
      "kind": "storeTemplate",
      "name": "work",
      "source": {
        "kind": "stage",
        "stageId": "s1",
      },
    },
  },
  {
    "id": "stage.inspect",
    "label": "Inspect",
    "verb": {
      "kind": "inspect",
      "ptype": "stage",
      "value": {
        "current": false,
        "name": "work",
        "pinned": true,
        "stageId": "s1",
      },
    },
  },
]
`;

exports[`golden menus (PBUI-ACTIONS-2 P0) > <tile> with every verb live, and the linked-view variant 1`] = `
[
  {
    "id": "tile.openReplaceView",
    "label": "Replace …",
    "verb": {
      "kind": "openReplaceView",
      "placementId": "n1",
    },
  },
  {
    "id": "tile.beginRenameView",
    "label": "Rename …",
    "verb": {
      "kind": "beginRenameView",
      "placementId": "n1",
    },
  },
  {
    "id": "tile.createLinkedDuplicate",
    "label": "Create linked duplicate",
    "verb": {
      "kind": "createLinkedDuplicate",
      "placementId": "n1",
    },
  },
  {
    "id": "tile.duplicateView",
    "label": "Duplicate",
    "verb": {
      "kind": "duplicateView",
      "placementId": "n1",
    },
  },
  {
    "id": "tile.splitTile.row",
    "label": "Split right",
    "verb": {
      "dir": "row",
      "kind": "splitTile",
      "nodeId": "n1",
    },
  },
  {
    "id": "tile.splitTile.col",
    "label": "Split below",
    "verb": {
      "dir": "col",
      "kind": "splitTile",
      "nodeId": "n1",
    },
  },
  {
    "id": "tile.exportTile",
    "label": "Copy view to clipboard",
    "verb": {
      "kind": "exportTile",
      "nodeId": "n1",
    },
  },
  {
    "id": "tile.importIntoTile",
    "label": "Replace from clipboard …",
    "verb": {
      "kind": "importIntoTile",
      "nodeId": "n1",
    },
  },
  {
    "id": "tile.storeTemplate",
    "label": "Save as a template …",
    "verb": {
      "kind": "storeTemplate",
      "name": "chart · α",
      "source": {
        "kind": "tile",
        "nodeId": "n1",
      },
    },
  },
  {
    "id": "tile.inspect",
    "label": "Inspect",
    "verb": {
      "kind": "inspect",
      "ptype": "tile",
      "value": {
        "app": "chart",
        "canClose": true,
        "customTitle": undefined,
        "docId": "d1",
        "duplicable": true,
        "placementCount": 1,
        "placementId": "n1",
        "title": "chart · α",
        "viewId": "v1",
      },
    },
  },
  {
    "id": "tile.removePlacement",
    "label": "Remove from this workspace",
    "verb": {
      "kind": "removePlacement",
      "placementId": "n1",
    },
  },
  {
    "id": "tile.closeView",
    "label": "Close view",
    "verb": {
      "kind": "closeView",
      "viewId": "v1",
    },
  },
]
`;

exports[`golden menus (PBUI-ACTIONS-2 P0) > <tile> with every verb live, and the linked-view variant 2`] = `
[
  {
    "id": "tile.openReplaceView",
    "label": "Replace …",
    "verb": {
      "kind": "openReplaceView",
      "placementId": "n1",
    },
  },
  {
    "id": "tile.beginRenameView",
    "label": "Rename …",
    "verb": {
      "kind": "beginRenameView",
      "placementId": "n1",
    },
  },
  {
    "id": "tile.createLinkedDuplicate",
    "label": "Create linked duplicate",
    "verb": {
      "kind": "createLinkedDuplicate",
      "placementId": "n1",
    },
  },
  {
    "id": "tile.duplicateView",
    "label": "Duplicate",
    "verb": {
      "kind": "duplicateView",
      "placementId": "n1",
    },
  },
  {
    "id": "tile.splitTile.row",
    "label": "Split right",
    "verb": {
      "dir": "row",
      "kind": "splitTile",
      "nodeId": "n1",
    },
  },
  {
    "id": "tile.splitTile.col",
    "label": "Split below",
    "verb": {
      "dir": "col",
      "kind": "splitTile",
      "nodeId": "n1",
    },
  },
  {
    "id": "tile.exportTile",
    "label": "Copy view to clipboard",
    "verb": {
      "kind": "exportTile",
      "nodeId": "n1",
    },
  },
  {
    "id": "tile.importIntoTile",
    "label": "Replace from clipboard …",
    "verb": {
      "kind": "importIntoTile",
      "nodeId": "n1",
    },
  },
  {
    "id": "tile.storeTemplate",
    "label": "Save as a template …",
    "verb": {
      "kind": "storeTemplate",
      "name": "chart · α",
      "source": {
        "kind": "tile",
        "nodeId": "n1",
      },
    },
  },
  {
    "id": "tile.inspect",
    "label": "Inspect",
    "verb": {
      "kind": "inspect",
      "ptype": "tile",
      "value": {
        "app": "chart",
        "canClose": true,
        "customTitle": undefined,
        "docId": "d1",
        "duplicable": true,
        "placementCount": 3,
        "placementId": "n1",
        "title": "chart · α",
        "viewId": "v1",
      },
    },
  },
  {
    "id": "tile.removePlacement",
    "label": "Remove from this workspace",
    "verb": {
      "kind": "removePlacement",
      "placementId": "n1",
    },
  },
  {
    "id": "tile.closeView",
    "label": "Close view everywhere",
    "verb": {
      "kind": "closeView",
      "viewId": "v1",
    },
  },
]
`;

exports[`golden menus (PBUI-ACTIONS-2 P0) > <workspace> pinned 1`] = `
[
  {
    "id": "workspace.switchStage",
    "label": "Switch to it",
    "verb": {
      "kind": "switchStage",
      "stageId": "stage-account",
    },
  },
  {
    "disabledBecause": "defined in code — cannot be renamed",
    "id": "workspace.beginRenameWorkspace",
    "label": "Rename this workspace …",
    "verb": {
      "kind": "beginRenameWorkspace",
      "spaceId": "ws-account",
    },
  },
  {
    "id": "workspace.duplicateWorkspace",
    "label": "Duplicate",
    "verb": {
      "kind": "duplicateWorkspace",
      "spaceId": "ws-account",
    },
  },
  {
    "id": "workspace.exportWorkspace",
    "label": "Copy this workspace to the clipboard",
    "verb": {
      "kind": "exportWorkspace",
      "spaceId": "ws-account",
    },
  },
  {
    "id": "workspace.importWorkspace",
    "label": "Add a workspace from the clipboard …",
    "verb": {
      "kind": "importWorkspace",
      "stageId": "stage-account",
    },
  },
  {
    "id": "workspace.storeTemplate",
    "label": "Save as a template …",
    "verb": {
      "kind": "storeTemplate",
      "name": "profile",
      "source": {
        "kind": "workspace",
        "spaceId": "ws-account",
      },
    },
  },
  {
    "id": "workspace.inspect",
    "label": "Inspect",
    "verb": {
      "kind": "inspect",
      "ptype": "workspace",
      "value": {
        "canDelete": true,
        "name": "profile",
        "pinned": true,
        "spaceId": "ws-account",
        "stageId": "stage-account",
      },
    },
  },
  {
    "disabledBecause": "defined in code — cannot be deleted",
    "id": "workspace.deleteWorkspace",
    "label": "Delete",
    "verb": {
      "kind": "deleteWorkspace",
      "spaceId": "ws-account",
    },
  },
]
`;
